# lakeinthelungs

./: .gitignore  meson.build  meson_options.txt
assets/: meson.build
assets/shaders/: base.frag  base.vert  meson.build
src/: amw.h  common.h  internal.h  main.c  meson.build
src/asm/: meson.build
src/audio/: meson.build
src/core/: arena.c  events.h  log.c  memory.h  meson.build  ticks.c
src/lake/: lake.c  lake.h  meson.build
src/platform/: hadal.h  hadopelagic.h  headless.c  headless.h  init.c  meson.build  system.h  window.c
src/platform/android/: meson.build
src/platform/apple/: meson.build
src/platform/linux/: linux_os.c  meson.build  wl.h  wl_display.c  wl_output.c  wl_window.c
src/platform/unix/: meson.build  unix_dll.c  unix_time.c
src/platform/windows/: meson.build
src/renderer/: context.c  meson.build  rana.h  renderer.c  renderer.h  vk.h  vk_driver.c  vk_rana.c  vk_surface.c  vk_validation.c
src/renderer/vulkan/: vk.h  vk_buffer.c  vk_cmd.c  vk_descriptor.c  vk_draw.c  vk_driver.c  vk_gpu.c  vk_pipeline.c  vk_rana.c  vk_shaders.h  vk_surface.c  vk_swapchain.c  vk_sync.c  vk_validation.c
src/vulkan/: meson.build  vk_shaders.h
